<resources>
    <string name="app_name">Book Listing App</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search book&#8230;</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="google_request_url">https://www.googleapis.com/books/v1/volumes?q=%1$s&amp;maxResults=10</string>
    <string name="enter_book_author">Enter book, author &#8230;</string>
    <string name="start_searching">To start searching for books enter a title or an author or any other word in the box below.</string>
    <string name="good_luck">Good luck!</string>
    <string name="search">Search</string>
    <string name="welcome">Welcome to the\nBook Listing App.</string>
    <string name="no_books_found">No books found.</string>
    <string name="no_internet_connection">No internet connection.</string>
</resources>
