<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.vengage.booklistingapp.FirstActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_margin_16dp">

        <TextView
            android:id="@+id/welcome_text_view"
            style="@style/welcome_text_view"
            android:text="@string/welcome"
            android:layout_gravity="center_horizontal"
            tools:ignore="UnusedAttribute"/>

        <TextView
            android:id="@+id/start_searching_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="casual"
            android:padding="@dimen/padding_margin_16dp"
            android:text="@string/start_searching"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/text_size_medium"
            tools:ignore="UnusedAttribute"/>

        <TextView
            android:id="@+id/good_luck_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="cursive"
            android:padding="@dimen/padding_margin_16dp"
            android:text="@string/good_luck"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/text_size_big"
            tools:ignore="UnusedAttribute"
            android:layout_marginBottom="@dimen/padding_margin_48dp"/>

        <EditText
            android:id="@+id/search_edit_text"
            style="@style/down_button"
            android:ems="10"
            android:hint="@string/enter_book_author"
            android:inputType="text|textPersonName"
            android:maxLength="49"
            android:maxLines="1"
            />

        <Button
            android:id="@+id/searchButton"
            style="@style/down_button"
            android:layout_marginBottom="@dimen/padding_margin_24dp"
            android:layout_marginTop="@dimen/padding_margin_16dp"
            android:text="@string/search"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_medium"/>
    </LinearLayout>
</ScrollView>


